<resources>
    <string name="app_name">tweeterAppBeta1</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">password</string>
    <string name="hint_username">username</string>
    <string name="button_signup">Signup</string>
    <string name="button_apply">Apply</string>
    <string name="button_signout">Signout</string>
    <string name="hint_tweet_text">what\'s up</string>
    <string name="text_login">Already have an account? Go to login</string>
    <string name="text_signup">No account? Go to Signup</string>
    <string name="hint_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>