<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/profilelayout"
            android:layout_marginTop="@dimen/grid_3x"
            android:layout_marginBottom="@dimen/grid_3x"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/photoIV"
                android:src="@drawable/default_user"
                android:layout_marginBottom="@dimen/grid_2x"
                android:layout_width="@dimen/standrad_width"
                android:layout_height="@dimen/standrad_width"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/standrad_width"
                android:layout_height="wrap_content"
                android:id="@+id/usernameTIL"
                android:paddingBottom="@dimen/grid_2x"
                android:layout_below="@id/photoIV">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/usernameET"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_username"/>



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/standrad_width"
                android:layout_height="wrap_content"
                android:id="@+id/emailTIL"
                android:paddingBottom="@dimen/grid_2x"
                android:layout_below="@id/usernameTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailET"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="@dimen/standrad_width"
                android:layout_height="@dimen/standard_hight"
                android:id="@+id/applyedbutton"
                android:layout_below="@id/emailTIL"
                android:layout_marginBottom="@dimen/grid_2x"
                android:text="@string/button_apply"
                android:onClick="onApply"
                style="@style/standradbutton"/>
            <Button
                android:layout_width="@dimen/standrad_width"
                android:layout_height="@dimen/standard_hight"
                android:id="@+id/signoutbutton"
                android:layout_below="@id/applyedbutton"
                android:layout_marginBottom="@dimen/grid_2x"
                android:text="@string/button_signout"
                android:onClick="onSignout"
                style="@style/standradbutton"/>


        </RelativeLayout>



    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/profileprogresslayout"
        android:orientation="vertical"
        android:gravity="center"
        android:elevation="5dp"
        android:visibility="gone"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>